openshift/templates/api/api-dc-template-artifactory.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: ${APPLICATION_NAME}-template
labels:
  template: ${APPLICATION_NAME}-template
objects:
- kind: DeploymentConfig
  apiVersion: apps.openshift.io/v1
  metadata:
    annotations:
      app.openshift.io/route-disabled: 'false'
      openshift.io/generated-by: OpenShiftWebConsole
    name: dpia-api-artifactory
    namespace: b996e6-dev
    labels:
      app: dpia-api-artifactory
      app.kubernetes.io/component: dpia-api-artifactory
      app.kubernetes.io/instance: dpia-api-artifactory
      app.kubernetes.io/name: dpia-api-artifactory
      app.openshift.io/runtime: nodejs
      app.openshift.io/runtime-namespace: b996e6-dev
  spec:
    strategy:
      type: Rolling
      rollingParams:
        updatePeriodSeconds: 1
        intervalSeconds: 1
        timeoutSeconds: 600
        maxUnavailable: 25%
        maxSurge: 25%
      resources: {}
      activeDeadlineSeconds: 21600
    triggers:
      - type: ConfigChange
    replicas: 1
    revisionHistoryLimit: 10
    test: false
    selector:
      app: dpia-api-artifactory
      deploymentconfig: dpia-api-artifactory
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: dpia-api-artifactory
          deploymentconfig: dpia-api-artifactory
        annotations:
          openshift.io/generated-by: OpenShiftWebConsole
      spec:
        volumes:
          - name: config-volume
            configMap:
              name: config.json
              defaultMode: 420
        containers:
          - resources: {}
            terminationMessagePath: /dev/termination-log
            name: dpia-api-artifactory
            ports:
              - containerPort: 3000
                protocol: TCP
            imagePullPolicy: IfNotPresent
            volumeMounts:
              - name: config-volume
                mountPath: /usr/src/app/config.json
                subPath: config.json
            terminationMessagePolicy: File
            image: >-
              artifacts.developer.gov.bc.ca/tb99-dpia-api-docker-local/dpia-api:latest
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
        securityContext: {}
        imagePullSecrets:
          - name: dpia-pull-secret-dev
        schedulerName: default-scheduler

parameters:
  - description: Application Name
    displayName: AppName
    name: APPLICATION_NAME
    required: true
    value: dpia-api-artifactory
  - description: Environment
    displayName: Environment
    name: ENVIRONMENT
    required: true
    value: dev
  - description: License Plate
    displayName: License Plate
    name: LICENSE_PLATE
    required: true
    value: b996e6
  - description: Imagestream
    displayName: Imagestream
    name: IMAGESTREAM
    required: true
    value: 'api-dev'
