openshift/templates/api/api-dc-template-v2.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: ${APPLICATION_NAME}-template
labels:
  template: ${APPLICATION_NAME}-template
objects:
- kind: DeploymentConfig
  apiVersion: apps.openshift.io/v1
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    name: ${APPLICATION_NAME}
    namespace: ${LICENSE_PLATE}-${ENVIRONMENT}
    labels:
      app: ${APPLICATION_NAME}
      hash: latest
      app.kubernetes.io/part-of: dpia-application
      app.openshift.io/runtime: nodejs
      app.openshift.io/runtime-namespace: ${LICENSE_PLATE}-${ENVIRONMENT}
  spec:
    strategy:
      type: Rolling
      rollingParams:
        updatePeriodSeconds: 1
        intervalSeconds: 1
        timeoutSeconds: 600
        maxUnavailable: 25%
        maxSurge: 25%
      resources: {}
      activeDeadlineSeconds: 21600
    triggers:
      - type: ImageChange
        imageChangeParams:
          automatic: true
          containerNames:
            - ${APPLICATION_NAME}
          from:
            kind: ImageStreamTag
            namespace: ${LICENSE_PLATE}-tools
            name: '${IMAGESTREAM}:latest'
          lastTriggeredImage: >-
            image-registry.openshift-image-registry.svc:5000/b996e6-tools/dpia-api@sha256:c6912fa14495b62ec86b9e1eeb567cb7d95a6523c7e235f38497a9efcb89ebed
      - type: ConfigChange
    replicas: 1
    revisionHistoryLimit: 10
    test: false
    selector:
      app: ${APPLICATION_NAME}
      deploymentconfig: ${APPLICATION_NAME}
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ${APPLICATION_NAME}
          deploymentconfig: ${APPLICATION_NAME}
        annotations:
          openshift.io/generated-by: OpenShiftWebConsole
      spec:
        volumes:
        - name: config-volume
          configMap:
            name: config.json
            defaultMode: 420
        containers:
          - name: ${APPLICATION_NAME}
            image: >-
              image-registry.openshift-image-registry.svc:5000/b996e6-tools/dpia-api@sha256:c6912fa14495b62ec86b9e1eeb567cb7d95a6523c7e235f38497a9efcb89ebed
            ports:
              - containerPort: 3000
                protocol: TCP
            resources:
              limits:
                cpu: 150m
                memory: 500Mi
              requests:
                cpu: 50m
                memory: 100Mi
            readinessProbe:
              httpGet:
                path: /api/health
                port: 3000
                scheme: HTTP
              initialDelaySeconds: 60
              timeoutSeconds: 10
              periodSeconds: 10
              successThreshold: 1
              failureThreshold: 3
            livenessProbe:
              httpGet:
                path: /api/health
                port: 3000
                scheme: HTTP
              initialDelaySeconds: 45
              timeoutSeconds: 10
              periodSeconds: 10
              successThreshold: 1
              failureThreshold: 3
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
            imagePullPolicy: IfNotPresent
            volumeMounts:
              - name: config-volume
                mountPath: /usr/src/app/config.json
                subPath: config.json
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
        securityContext: {}
        schedulerName: default-scheduler

parameters:
  - description: Application Name
    displayName: AppName
    name: APPLICATION_NAME
    required: true
    value: dpia-api
  - description: Environment
    displayName: Environment
    name: ENVIRONMENT
    required: true
    value: dev
  - description: License Plate
    displayName: License Plate
    name: LICENSE_PLATE
    required: true
    value: b996e6
  - description: Imagestream
    displayName: Imagestream
    name: IMAGESTREAM
    required: true
    value: 'api-dev'
