openshift/templates/api/api-service-template-v2.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: ${APPLICATION_NAME}-template
labels:
  template: ${APPLICATION_NAME}-template
objects:
- kind: Service
  apiVersion: v1
  metadata:
    name: ${APPLICATION_NAME}
    namespace: ${LICENSE_PLATE}-${ENVIRONMENT}
  spec:
    ipFamilies:
      - IPv4
    ports:
      - name: 3000-tcp
        protocol: TCP
        port: 3000
        targetPort: 3000
    internalTrafficPolicy: Cluster
    type: ClusterIP
    ipFamilyPolicy: SingleStack
    sessionAffinity: None
    selector:
      app: ${APPLICATION_NAME}

parameters:
  - description: Application Name
    displayName: AppName
    name: APPLICATION_NAME
    required: true
    value: dpia-api
  - description: Environment
    displayName: Environment
    name: ENVIRONMENT
    required: true
    value: dev
  - description: License Plate
    displayName: License Plate
    name: LICENSE_PLATE
    required: true
    value: b996e6
