openshift/templates/api/api-test-service.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: ${APPLICATION_NAME}-template
labels:
  template: ${APPLICATION_NAME}-template
objects:
- kind: Service
  apiVersion: v1
  metadata:
    name: ${APPLICATION_NAME}
    namespace: ${LICENSE_PLATE}-${ENVIRONMENT}
    labels:
      hash: ${IMAGE_TAG}
  spec:
    ipFamilies:
      - IPv4
    ports:
      - name: 3000-tcp
        protocol: TCP
        port: 3000
        targetPort: 3000
    internalTrafficPolicy: Cluster
    type: ClusterIP
    ipFamilyPolicy: SingleStack
    sessionAffinity: None
    selector:
      app: ${APPLICATION_NAME}

parameters:
  - description: Application Name
    displayName: AppName
    name: APPLICATION_NAME
    required: true
    value: dpia-api
  - description: Environment
    displayName: Environment
    name: ENVIRONMENT
    required: true
    value: dev
  - description: License Plate
    displayName: License Plate
    name: LICENSE_PLATE
    required: true
    value: b996e6
  - description: Image Tag
    displayName: Image Tag
    required: true
    name: IMAGE_TAG
    value: latest
  - description: Vault Role
    displayName: Vault Role
    required: false
    name: VAULT_ROLE
  - description: Vault Postgres Secret Name
    displayName: Vault Postgres Secret Name
    required: false
    name: VAULT_POSTGRES_SECRET_NAME
