openshift/templates/api/api-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ${APPLICATION_NAME}-${IMAGE_TAG}
  namespace: ${LICENSE_PLATE}-${ENVIRONMENT}
spec:
  host: ${APPLICATION_NAME}-${IMAGE_TAG}-${ENVIRONMENT}.apps.silver.devops.gov.bc.ca
  to:
    kind: Service
    name: ${APPLICATION_NAME}-${IMAGE_TAG}
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
status:
  ingress:
    - host: ${APPLICATION_NAME}-${IMAGE_TAG}-${ENVIRONMENT}.apps.silver.devops.gov.bc.ca
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2022-06-28T18:13:10Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.silver.devops.gov.bc.ca

parameters:
  - description: Application Name
    displayName: AppName
    name: APPLICATION_NAME
    required: true
    value: dpia-api
  - description: Environment
    displayName: Environment
    name: ENVIRONMENT
    required: true
    value: dev
  - description: License Plate
    displayName: License Plate
    name: LICENSE_PLATE
    required: true
    value: b996e6
  - description: Image Tag
    displayName: Image Tag
    required: true
    name: IMAGE_TAG
    value: latest
